
    BUGFIX: Don't stuck in delete action if user does not handle it

    BUGFIX: Enable use channel splitter inside Begin/End for node and pin. #28

    BUGFIX: Don't manipulate channels when editor is suspended #28

    BUGFIX: Fix ObjectId serialization

    BUGFIX: GroupNode resize instead of move on low zoom #87

    BUGFIX: Make Canvas work with Viewports (#91, #90)

    BUGFIX: Explicitly choose embedded GL3W as OpenGL extension loader (#96)

    BUGFIX: Application: Don't apply HiDPI logic for (-FLT_MAX,-FLT_MAX) mouse position

    BUGFIX: Editor: Clamp over-the-edge drag distance to prevent scrolling to infinity on focus lost

    BUGFIX: Editor: Consume scroll event (#73) (require ImGui 17909 or later)

    BUGFIX: Editor: Respect window focus while handling actions (#99)

    BUGFIX: Examples: Correct case of `data` directory (#97)

    BUGFIX: Canvas: Save/Restore CursorMaxPos only in Begin/End (#101)

    BUGFIX: Editor: Don't implicitly capture keyboard (#83)

    BUGFIX: Application: Reset key down state after loosing keyboard focus

    BUGFIX: Editor: Make off-screen dragging work again

    BUGFIX: ImGui: Disable obsolete functions (#103)

    BUGFIX: Editor: Allow nodes with zero size (#134)

    BUGFIX: Canvas: Update call ImGui::IsClippedEx() on ImGui > 18415 (#138)

    BUGFIX: Canvas: Disable pink debug outline around widget (#150)

    BUGFIX: Editor: Remove node settings when it is explicitly deleted (#153)

    BUGFIX: Editor: Improve link dragging with fast movement (#156)

    BUGFIX: Editor: Make selection rect start at click point

    BUGFIX: Editor: Make selection rect sharp

    BUGFIX: Editor: Don't populate unused channels with empty draw command, fixes memory leak (#168, #165)

    BUGFIX: Application: Correctly set DX11 View for NULL textures (#162)

    BUGFIX: Application: Recreate DX11 resources lazily (related to #162)

    BUGFIX: Editor: Don't steal input from active user widget (#172)